Fix z-index crap

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,7 +1,6 @@
 $nav-height: 54px;
 
 header {
-    background-color: $blue;
     position: relative;
 
     height: 70vh;
@@ -19,7 +18,8 @@ header {
     }
     @include slant();
 
-    z-index: -1;
+    &.blue { background-color: $blue }
+
     
     .bg {
         width: 100vw;
@@ -66,7 +66,6 @@ header nav {
         background: $white;
         margin: 0;
         height: 64px;
-        z-index: 99;
         @include drop-shadow();
         span.burger, span.burger::before, span.burger::after {
             background: $blue !important;
@@ -216,6 +215,7 @@ header .hero {
 
     margin: 0 auto;
     padding: 16px;
+
     z-index: 1;
 
     max-width: $break-phone;
